Increment brightness of colors

--- a/css/main.css
+++ b/css/main.css
@@ -76,35 +76,35 @@ input::-webkit-inner-spin-button {
 }
 
 .red {
-  background-color: #a32c24;
+  background-color: #a3271e;
 }
 
 .blue {
-  background-color: #1e4f66;
+  background-color: #184b63;
 }
 
 .orange {
-  background-color: #bb5419;
+  background-color: #b95013;
 }
 
 .purple {
-  background-color: #6a217c;
+  background-color: #631975;
 }
 
 .green {
-  background-color: #257425;
+  background-color: #1e6e1e;
 }
 
 .brown {
-  background-color: #72441e;
+  background-color: #6e3f18;
 }
 
 .pink {
-  background-color: #a5256b;
+  background-color: #a01d65;
 }
 
 .teal {
-  background-color: #12695e;
+  background-color: #0e685c;
 }
 
 .light-grey {
