Fix intensity of colors

--- a/css/main.css
+++ b/css/main.css
@@ -76,35 +76,35 @@ input::-webkit-inner-spin-button {
 }
 
 .red {
-  background-color: #a3271e;
+  background-color: #c4261b;
 }
 
 .blue {
-  background-color: #184b63;
+  background-color: #0f4869;
 }
 
 .orange {
-  background-color: #b95013;
+  background-color: #c95613;
 }
 
 .purple {
-  background-color: #631975;
+  background-color: #610e75;
 }
 
 .green {
-  background-color: #1e6e1e;
+  background-color: #1f801f;
 }
 
 .brown {
-  background-color: #6e3f18;
+  background-color: #804414;
 }
 
 .pink {
-  background-color: #a01d65;
+  background-color: #c21c77;
 }
 
 .teal {
-  background-color: #0e685c;
+  background-color: #108a7a;
 }
 
 .light-grey {
