Change main layout

--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,11 @@ input::-webkit-inner-spin-button {
 }
 
 .orange {
-  background-color: #c95613;
+  background-color: #d45811;
 }
 
 .purple {
-  background-color: #610e75;
+  background-color: #440c69;
 }
 
 .green {
@@ -96,7 +96,7 @@ input::-webkit-inner-spin-button {
 }
 
 .brown {
-  background-color: #804414;
+  background-color: #a15313;
 }
 
 .pink {
@@ -104,7 +104,7 @@ input::-webkit-inner-spin-button {
 }
 
 .teal {
-  background-color: #108a7a;
+  background-color: #0a5f4b;
 }
 
 .light-grey {
