Change teams location

--- a/css/main.css
+++ b/css/main.css
@@ -84,11 +84,11 @@ input::-webkit-inner-spin-button {
 }
 
 .orange {
-  background-color: #d45811;
+  background-color: #e05a0d;
 }
 
 .purple {
-  background-color: #440c69;
+  background-color: #6e0a6e;
 }
 
 .green {
