Change height alert

--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ input::-webkit-inner-spin-button {
 }
 
 .orange {
-  background-color: #e05a0d;
+  background-color: #d4560d;
 }
 
 .purple {
@@ -96,7 +96,7 @@ input::-webkit-inner-spin-button {
 }
 
 .brown {
-  background-color: #a15313;
+  background-color: #964d12;
 }
 
 .pink {
