Change team colors

--- a/css/main.css
+++ b/css/main.css
@@ -76,35 +76,35 @@ input::-webkit-inner-spin-button {
 }
 
 .red {
-  background-color: #b62116;
+  background-color: #aa1c12;
 }
 
 .blue {
-  background-color: #0f4768;
+  background-color: #114969;
 }
 
 .orange {
-  background-color: #c55412;
+  background-color: #c04d0b;
 }
 
 .purple {
-  background-color: #6e096e;
+  background-color: #7c087c;
 }
 
 .green {
-  background-color: #186618;
+  background-color: #176317;
 }
 
 .brown {
-  background-color: #8d4810;
+  background-color: #70390d;
 }
 
 .pink {
-  background-color: #b4196e;
+  background-color: #aa1868;
 }
 
 .teal {
-  background-color: #0a5f4b;
+  background-color: #095342;
 }
 
 .light-grey {
