Change team colors

--- a/css/main.css
+++ b/css/main.css
@@ -78,39 +78,39 @@ input::-webkit-inner-spin-button {
 }
 
 .red {
-  background-color: #aa1c12;
+  background-color: #a81f15;
 }
 
 .blue {
-  background-color: #114969;
+  background-color: #0c496d;
 }
 
 .orange {
-  background-color: #c04d0b;
+  background-color: #c44311;
 }
 
 .purple {
-  background-color: #7c087c;
+  background-color: #741174;
 }
 
 .green {
-  background-color: #176317;
+  background-color: #136313;
 }
 
 .brown {
-  background-color: #70390d;
+  background-color: #6e3a10;
 }
 
 .pink {
-  background-color: #aa1868;
+  background-color: #a51b59;
 }
 
 .teal {
-  background-color: #095342;
+  background-color: #0a634e;
 }
 
 .light-grey {
-  background-color: #746c60;
+  background-color: #5e584f;
 }
 
 .grey {
