--- a/css/main.css
+++ b/css/main.css
@@ -378,8 +378,9 @@ input[type="number"] {
 }
 
 #t-message {
+  padding: 0.2vh 0 0.2vh 1.4vh;
+  width: 27.4vh;
   margin: 1vh 0 0.4vh 0;
-  padding: 0.2vh 0.5vh 0.2vh 1vh;
 }
 
 .extra-data-container {
